[gd_scene load_steps=5 format=3 uid="uid://71mkki6432yy"]

[ext_resource type="Texture2D" uid="uid://8yvgi81apxxg" path="res://assets/icons/open.svg" id="1_qx788"]
[ext_resource type="Script" uid="uid://cnh2n6srqnkxk" path="res://scenes/render_screen/render_screen.gd" id="1_xqju4"]
[ext_resource type="Texture2D" uid="uid://b5b68ecgp4cw5" path="res://assets/icons/copy.svg" id="3_s6tus"]
[ext_resource type="PackedScene" uid="uid://yfososo2t8n4" path="res://scenes/view_panel/view_panel.tscn" id="4_kywnc"]

[node name="RenderScreen" type="HSplitContainer" node_paths=PackedStringArray("render_profiles_hbox", "grid_audio", "path_line_edit", "video_codec_option_button", "video_quality_hslider", "video_gop_spin_box", "video_speed_label", "video_speed_hslider", "audio_codec_option_button", "threads_spin_box", "chapters_text_edit")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_xqju4")
render_profiles_hbox = NodePath("VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/RenderProfilesScroll/RenderProfilesHBox")
grid_audio = NodePath("VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/AudioGrid")
path_line_edit = NodePath("VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/TopSettingsHBox/RenderPathHBox/PathLineEdit")
video_codec_option_button = NodePath("VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/VideoGrid/VideoCodecOptionButton")
video_quality_hslider = NodePath("VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/VideoGrid/QualityHSlider")
video_gop_spin_box = NodePath("VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/VideoGrid/GOPSizeSpinBox")
video_speed_label = NodePath("VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/VideoGrid/SpeedLabel")
video_speed_hslider = NodePath("VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/VideoGrid/SpeedHSlider")
audio_codec_option_button = NodePath("VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/AudioGrid/AudioCodecOptionButton")
threads_spin_box = NodePath("VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/ThreadsGrid/ThreadsSpinBox")
chapters_text_edit = NodePath("VBox/ChaptersPanel/Margin/Panel/Margin/VBox/ChaptersTextEdit")
metadata/_tab_index = 1

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="RenderOptionsPanel" type="PanelContainer" parent="VBox"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"box"

[node name="Margin" type="MarginContainer" parent="VBox/RenderOptionsPanel"]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="VBox/RenderOptionsPanel/Margin"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="VBox/RenderOptionsPanel/Margin/Panel"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox"]
layout_mode = 2
theme_type_variation = &"title_label"
text = "title_render_settings"

[node name="RenderProfilesLabel" type="Label" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox"]
layout_mode = 2
text = "render_option_profile"

[node name="RenderProfilesScroll" type="ScrollContainer" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
draw_focus_border = true
vertical_scroll_mode = 0

[node name="RenderProfilesHBox" type="HBoxContainer" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/RenderProfilesScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopSettingsHBox" type="GridContainer" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox"]
layout_mode = 2
columns = 2

[node name="PathLabel" type="Label" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/TopSettingsHBox"]
layout_mode = 2
text = "render_option_path"

[node name="RenderPathHBox" type="HBoxContainer" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/TopSettingsHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PathLineEdit" type="LineEdit" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/TopSettingsHBox/RenderPathHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SelectPathButton" type="TextureButton" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/TopSettingsHBox/RenderPathHBox"]
custom_minimum_size = Vector2(21, 0)
layout_mode = 2
texture_normal = ExtResource("1_qx788")
ignore_texture_size = true
stretch_mode = 5

[node name="Line0" type="HSeparator" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox"]
layout_mode = 2

[node name="VideoLabel" type="Label" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox"]
layout_mode = 2
theme_type_variation = &"title_label"
text = "title_render_video"

[node name="VideoGrid" type="GridContainer" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox"]
layout_mode = 2
columns = 2

[node name="CodecLabel" type="Label" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/VideoGrid"]
layout_mode = 2
text = "render_option_video_codec"

[node name="VideoCodecOptionButton" type="OptionButton" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/VideoGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="QualityLabel" type="Label" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/VideoGrid"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
tooltip_text = "Adjusts the CRF (Constant Rate Factor), lowest quality setting is 50, and highest quality setting is 15. Default is set to 18 Used for adjusting bitrate which has an impact on quality and size. Value 0 gives the best, 51 worst quality, 18 not really noticable."
mouse_filter = 1
text = "render_option_quality"

[node name="QualityHSlider" type="HSlider" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/VideoGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "render_option_tooltip_quality"
min_value = -50.0
max_value = -15.0
value = -18.0

[node name="SpeedLabel" type="Label" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/VideoGrid"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
tooltip_text = "Adjusts the speed for encoding H264. Setting the speed too high might have a negative impact on the final video quality."
mouse_filter = 1
text = "render_option_speed"

[node name="SpeedHSlider" type="HSlider" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/VideoGrid"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "render_option_tooltip_speed"
max_value = 8.0
value = 3.0
tick_count = 9
ticks_on_borders = true

[node name="GOPSizeLabel" type="Label" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/VideoGrid"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
tooltip_text = "Group Of Pictures. Higher value is better for compression compared to a lower value. But how higher the value is, the less precise it will get for seeking and scrubbing through the video playback. Put to a low value if you intend to use the rendered video for editing."
mouse_filter = 1
text = "render_option_gop_size"

[node name="GOPSizeSpinBox" type="SpinBox" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/VideoGrid"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "render_option_tooltip_gop_size"
value = 15.0
allow_greater = true
alignment = 2

[node name="Line1" type="HSeparator" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox"]
layout_mode = 2

[node name="AudioTitleHBox" type="HBoxContainer" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox"]
layout_mode = 2

[node name="AudioLabel" type="Label" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/AudioTitleHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"title_label"
text = "title_render_audio"

[node name="RenderAudioCheckButton" type="CheckButton" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/AudioTitleHBox"]
layout_mode = 2
button_pressed = true
flat = true

[node name="AudioGrid" type="GridContainer" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox"]
layout_mode = 2
columns = 2

[node name="CodecLabel" type="Label" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/AudioGrid"]
layout_mode = 2
text = "render_option_audio_codec"

[node name="AudioCodecOptionButton" type="OptionButton" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/AudioGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Line2" type="HSeparator" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox"]
layout_mode = 2

[node name="ThreadsBoxLabel" type="Label" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"title_label"
text = "title_cpu_threads"

[node name="ThreadsGrid" type="GridContainer" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox"]
layout_mode = 2
columns = 2

[node name="ThreadsCodecLabel" type="Label" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/ThreadsGrid"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "render_option_threads_cores"

[node name="ThreadsSpinBox" type="SpinBox" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/ThreadsGrid"]
layout_mode = 2
tooltip_text = "render_option_tooltip_threads_cores"

[node name="Line3" type="HSeparator" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox"]
layout_mode = 2

[node name="StartRenderButton" type="Button" parent="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox"]
layout_mode = 2
text = "button_start_render"

[node name="ChaptersPanel" type="PanelContainer" parent="VBox"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"box"

[node name="Margin" type="MarginContainer" parent="VBox/ChaptersPanel"]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="VBox/ChaptersPanel/Margin"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="VBox/ChaptersPanel/Margin/Panel"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="VBox/ChaptersPanel/Margin/Panel/Margin"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="VBox/ChaptersPanel/Margin/Panel/Margin/VBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBox/ChaptersPanel/Margin/Panel/Margin/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"title_label"
text = "title_chapters"

[node name="CopyChaptersButton" type="TextureButton" parent="VBox/ChaptersPanel/Margin/Panel/Margin/VBox/HBox"]
custom_minimum_size = Vector2(17, 0)
layout_mode = 2
texture_normal = ExtResource("3_s6tus")
ignore_texture_size = true
stretch_mode = 5

[node name="ChaptersTextEdit" type="TextEdit" parent="VBox/ChaptersPanel/Margin/Panel/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
editable = false
scroll_smooth = true
scroll_fit_content_width = true

[node name="ViewPanel" parent="." instance=ExtResource("4_kywnc")]
layout_mode = 2

[connection signal="pressed" from="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/TopSettingsHBox/RenderPathHBox/SelectPathButton" to="." method="_on_select_save_path_button_pressed"]
[connection signal="item_selected" from="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/VideoGrid/VideoCodecOptionButton" to="." method="_on_video_codec_option_button_item_selected"]
[connection signal="toggled" from="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/AudioTitleHBox/RenderAudioCheckButton" to="." method="_on_render_audio_check_button_toggled"]
[connection signal="pressed" from="VBox/RenderOptionsPanel/Margin/Panel/Margin/VBox/StartRenderButton" to="." method="_on_start_render_button_pressed"]
[connection signal="pressed" from="VBox/ChaptersPanel/Margin/Panel/Margin/VBox/HBox/CopyChaptersButton" to="." method="_on_copy_chapters_button_pressed"]
